--- a/study-party/public/index.html
+++ b/study-party/public/index.html
@@ -27,7 +27,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto:200&display=swap" rel="stylesheet">
+
     <title>Study Party</title>
   </head>
   <body>
